Fix slanted top of bright platform face

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -287,9 +287,9 @@
       let brightPlatformFaceTopFrontLeftX =
           darkPlatformFaceTopBackLeftX + darkPlatformFaceTopFrontRightX
               - darkPlatformFaceTopBackRightX;
-      let brightPlatformFaceTopFrontLeftY =
-          darkPlatformFaceTopBackLeftY + darkPyramidFaceBottomFrontLeftY
-              - darkPyramidFaceBottomBackLeftY;
+      let brightPlatformFaceTopFrontLeftY = darkPlatformFaceTopFrontRightY;
+          //darkPlatformFaceTopBackLeftY + darkPyramidFaceBottomFrontLeftY
+          //    - darkPyramidFaceBottomBackLeftY;
 
       let brightPlatformPath =
           document.createElementNS("http://www.w3.org/2000/svg", 'path');
