Remove unneeded precision from darkPyramidFaceToDarkPlatformFaceDeltaY constant.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -17,7 +17,7 @@
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaX = 4.9;
     const darkPyramidFaceBottomFrontLeftToBottomBackLeftDeltaY = 3.6;
 
-    const darkPyramidFaceToDarkPlatformFaceDeltaY = 3.9601266632649286;
+    const darkPyramidFaceToDarkPlatformFaceDeltaY = 3.96;
 
     const brightPlatformFaceBottomLeftToRightDeltaX = 49;
   </script>
