Fix bug in platform position that was introduced in earlier commit.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -203,7 +203,7 @@
 
       let darkPlatformFaceTopFrontLeftX =
           darkPyramidFaceBottomFrontLeftX
-              - darkPyramidFaceToDarkPlatformFaceDeltaY
+              + darkPyramidFaceToDarkPlatformFaceDeltaY
                     / pyramidFrontLeftEdgeSlope;
       let darkPlatformFaceTopFrontLeftY =
           darkPyramidFaceBottomFrontLeftY
